# ctxform

./: CITATION.cff  Makefile  README.md  pyproject.toml  test.py
ctxform/: __main__.py  bool.py  common.py  ctl.py  logics.py  ltl.py  parser.py  printer.py  service.py  tfeval.py  tfsimp.py  transform.py
test/: formulas.json  mutated_formulas.json
web/: index.css  index.htm  index.js
